# cpp-concurrent-prime-finder

./: CMakeLists.txt  a.out  intel.out  main.cpp  main.cpp.bak  output.txt  qt_parts.h  useful_functions.h
